@@ -1,3 +1,8 @@
+2011-09-21  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/random.c (ep_output): Bug fix for second argument of
+	fnv32_hash, and change the way to place values into the buffer.
+
 2011-09-20  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* boards/STBEE/mcuconf.h, boards/STBEE/board.h: New.
